# fastapi-sync-async

./: Dockerfile  Justfile  Makefile  README.md  docker-compose.yml  main.py  otel-collector-config.yaml  pyproject.toml
grafana-provisioning/datasources/: datasources.yaml
